add route: GetManyClients
