# openapi.yml
@@ -13,6 +13,8 @@ paths:
   /deliveries:
     get:
       summary: Returns a list of deliveries.
+      tags:
+        - "Deliveries"
       parameters:
         - $ref: "#/components/parameters/OffsetParam"
         - $ref: "#/components/parameters/LimitParam"
@@ -73,6 +75,8 @@ paths:
           description: Internal server error
     post:
       summary: Creates a new delivery.
+      tags:
+        - "Deliveries"
       requestBody:
         description: Delivery object to be added to the list
         required: true
@@ -95,6 +99,8 @@ paths:
   /deliveries/{id}:
     get:
       summary: Returns a delivery by id.
+      tags:
+        - "Deliveries"
       parameters:
         - in: path
           name: id
@@ -115,8 +121,11 @@ paths:
           description: Delivery not found
         "500":
           description: Internal server error
+
     put:
       summary: Updates a delivery by id.
+      tags:
+        - "Deliveries"
       parameters:
         - in: path
           name: id
@@ -147,6 +156,8 @@ paths:
 
     delete:
       summary: Deletes a delivery by id.
+      tags:
+        - "Deliveries"
       parameters:
         - in: path
           name: id
@@ -167,6 +178,66 @@ paths:
           description: Delivery not found
         "500":
           description: Internal server error
+  
+  ############# CLIENTS #################
+  /clients:
+    get:
+      summary: Returns a list of clients.
+      tags:
+        - "Clients"
+      parameters:
+        - $ref: "#/components/parameters/OffsetParam"
+        - $ref: "#/components/parameters/LimitParam"
+        - in: query
+          name: status
+          description: Filter by client active status
+          example: ACTIVE
+          schema:
+            $ref: "#/components/schemas/ActiveStatus"
+        - in: query
+          name: name
+          description: Filter by client name
+          example: Amazon
+          schema:
+            type: string
+        - in: query
+          name: city
+          example: Paris
+          description: Filter by city name
+          schema:
+            type: string
+        - in: query
+          name: postalCode
+          example: 75008
+          description: Filter by postal code
+          schema:
+            type: string
+        - in: query
+          name: country
+          example: France
+          description: Filter by country
+          schema:
+            type: string
+      responses:
+        "200": # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: "#/components/schemas/ClientsArray"
+                  pagination:
+                    $ref: "#/components/schemas/Pagination"
+                required:
+                  - data
+                  - pagination
+        "400":
+          description: Bad request - validation error
+        "500":
+          description: Internal server error
+      
 
 components:
   ############# PARAMETERS #################
@@ -219,6 +290,23 @@ components:
         totalItems:
           type: integer
           example: 89
+    
+    ############# ENUMS #################
+    # Pickup entities
+    PickupEntities:
+      type: string
+      description: The type of the entity (in UPPERCASE)
+      enum:
+        - CLIENT
+        - RELAY
+    
+    # Active status
+    ActiveStatus:
+      type: string
+      description: The active status of the entity (in UPPERCASE)
+      enum:
+        - ACTIVE
+        - INACTIVE
 
     ############# DELIVERIES SCHEMAS #################
     # Base delivery schema
@@ -418,11 +506,70 @@ components:
           example: 1
         entityType:
           $ref: "#/components/schemas/PickupEntities"
-
-    # Pickup entities
-    PickupEntities:
-      type: string
-      description: The type of the entity (in UPPERCASE)
-      enum:
-        - CLIENT
-        - RELAY
+  
+    ############# CLIENTS SCHEMAS #################
+    # Client schema
+    Client:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: The id of the client
+          example: 1
+        name:
+          type: string
+          description: The name of the client
+          example: Amazon
+        streetNumber:
+          type: string
+          description: The street number of the client
+          example: 123
+        street:
+          type: string
+          description: The street of the client
+          example: Main St
+        city:
+          type: string
+          description: The city of the client
+          example: Paris
+        postalCode:
+          type: string
+          description: The postal code of the client
+          example: 75008
+        country:
+          type: string
+          description: The country of the client
+          example: France
+        comment:
+          type: string
+          description: The comment of the client
+          example: Derrière le hangar
+        active:
+          type: boolean
+          description: The active status of the client
+          example: true
+        phone:
+          type: string
+          description: The phone number of the client
+          example: +33612345678
+        email:
+          type: string
+          description: The email of the client
+          example: example@mail.com
+      required:
+        - id
+        - name
+        - streetNumber
+        - street
+        - city
+        - postalCode
+        - country
+        - active
+        - phone
+        - email
+    
+    # Clients array
+    ClientsArray:
+      type: array
+      items:
+        $ref: "#/components/schemas/Client"
